# Robosats-Experimental

./: .dockerignore  .gitattributes  .gitignore  ANDROID_BUILD.md  CONTRIBUTING.md  README.md  SECURITY.md  altstore.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  dependency-review.yml  dependency-submission.yml  desktop-build.yml  mobile-build.yml  release.yml  security.yml
android/: build-native.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/robo-identities-native/: Cargo.toml  README.md  build-android.sh
android/robo-identities-native/robohash/: Cargo.toml
android/robo-identities-native/robohash/src/: backgrounds.rs  hash.rs  image.rs  lib.rs
android/scripts/: check-16kb-alignment.sh
android/tor-native/: Cargo.toml  build-android.sh  rust-toolchain.toml
android/tor-native/src/: lib.rs
deploy/: nginx.conf
desktop/: README.md  electron-builder.cjs  package.json  tsconfig.json
desktop/arti-sidecar/: Cargo.toml
desktop/arti-sidecar/src/: main.rs
desktop/assets/: splash.html
desktop/scripts/: appimage.mjs  appimage.test.mjs  package.mjs  prepare.mjs
desktop/src/: appProtocol.test.ts  appProtocol.ts  artiProcess.ts  main.ts  preload.ts  runtimePreferences.test.ts  runtimePreferences.ts  splashPreload.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  preferences.rs  runtime.rs
docs/: color-system.md  releasing.md  typography-system.md
ios/: Package.swift  README.md  project.yml  xtool.yml
ios/Config/: Info.plist  Info.xtool.plist
ios/RoboSatsExp/: AppResources.swift  AppVersion.swift  ContentView.swift  RoboSatsExpApp.swift
ios/RoboSatsExp/Diagnostics/: AppDiagnostics.swift
ios/RoboSatsExp/Network/: TorNetworkClient.swift
ios/RoboSatsExp/Storage/: CacheStorage.swift  SecureStorage.swift
ios/RoboSatsExp/Support/: RoboSatsExp-Bridging-Header.h
ios/RoboSatsExp/Tor/: ArtiNative.swift  TorLoadingView.swift  TorManager.swift
ios/RoboSatsExp/Web/: WebAppSchemeHandler.swift  WebAppView.swift  WebBridge.swift
ios/scripts/: build-rust-xtool.sh  build-rust.sh  build-unsigned-ipa-xtool.sh  build-unsigned-ipa.sh  check-build-config.mjs  prepare-build-config.mjs  sync-web-assets.mjs  verify-unsigned-ipa.sh
ios/tor-native/: Cargo.toml
ios/tor-native/include/: arti_mobile.h
ios/tor-native/src/: lib.rs
ios/tor-native/swiftpm/: arti_mobile_shim.c
nodeapp/: Dockerfile  README.md  compose.yml  nginx.conf
scripts/: audit-trade-previews.mjs  check-production-build.mjs  check-typography.mjs  deploy-altstore-manifest.mjs  deploy-nginx.mjs  generate-altstore-manifest.mjs  release-downloads.mjs  release-downloads.test.mjs  release-metadata.mjs  release-metadata.test.mjs  sign-release-assets.sh  sign-release-assets.test.sh  sync-android-assets.mjs
src/: main.tsx  vite-env.d.ts
src/app/: App.tsx  platform.test.ts  platform.ts  prewarm.ts  routes.tsx
src/components/app/: AppLoadingWheel.tsx  AppShell.tsx  AppSidebar.tsx  DesktopTitleBar.tsx  RoboSatsLogo.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  infoHint.tsx  robotIcon.tsx  visualSelect.tsx
src/dev/: TradeLabPage.tsx  tradePreviewFixtures.disabled.ts
src/domains/audio/: audioAssets.test.ts  audioAssets.ts  audioController.ts
src/domains/chat/: ChatStagePanel.tsx  chat.types.ts  chatApi.test.ts  chatApi.ts  chatCrypto.test.ts  chatCrypto.ts  (+4 more)
src/lib/: format.test.ts  format.ts  hexToBase91.test.ts  hexToBase91.ts  userError.test.ts  userError.ts
src/styles/: components.css  globals.css  layout.css  palette.test.ts  typography.css
(+131 files in other folders)
