[package]
name = "arti-android"
version = "2.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
arti-client = { version = "0.44", default-features = false, features = [
    "tokio",
    "rustls",
    "compression",
    "flowctl-cc",
    "onion-service-client",
    "static-sqlite",
] }
tor-rtcompat = { version = "0.44", default-features = false, features = ["tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
futures = "0.3"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
