[package]
name = "robosats-arti"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
arti-client = { version = "0.44", default-features = false, features = [
    "tokio",
    "rustls",
    "compression",
    "flowctl-cc",
    "onion-service-client",
    "static",
    "static-sqlite",
] }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "signal"] }
tor-rtcompat = { version = "0.44", default-features = false, features = ["tokio", "rustls", "static"] }

[patch.crates-io]
saturating-time = { path = "vendor/saturating-time" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
