[package]
name = "robosats-exp-desktop"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "robosats_exp_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["macos-proxy", "tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1", features = ["net", "time"] }
url = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
